# whitebox_impl

./: .gitignore  CMakeLists.txt  config.h.in  main.cpp
include/: config.h
include/LBlock/: LBlock80.h  LBlock80_8bit.h  LBlock80wb.h  LblocSbox.h  LblockSbox_8Bit.h
include/affine/: MatrixUtils.h  NTLUtils.h
include/internal/: DebugUtils.h  ayssl_random.h  config.h
include/klein/: klein64.h  klein80.h  klein80wb.h  klein96.h  kleinSbox.h
include/m4ri/: m4ri_config.h
include/math/: affine_transform.h  matrix_gf2.h  matrix_utils.h
include/openssl/: modes.h
include/present/: present80.h  present80wb.h
include/simon/: cipher_constants.h  simon.h
include/simon_wb/: simon_wb.h  simon_wb_generator.h
include/sms4/: sms4.h
include/sms4wb/: sms4_wb.h  sms4_wb_generator.h
include/swan/: swan.h
include/swan_wb/: swan_wb.h  swan_wb_generator.h
test/: LBlock_test.cpp  NTLTest.cpp  count_cycles.h  klein_vector.cpp  present_test.cpp  simon_test.cpp  sm4_control_experiment.cpp  sms4_wb_test.cpp  swan_test_main.cpp  test_bench.h
test/utils/: testutil.c  testutil.h
